--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,20 +21,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaytmActivity"></activity>
-        <activity android:name=".PaypalActivity" />
-        <activity android:name=".PaymentActivity" />
+        <service
+            android:name=".GettingTokenService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".MyFirebaseInstanceService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".PaytmActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PaypalActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PaymentActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".MainActivity" />
-        <activity android:name=".Invite" />
+        <activity android:name=".Invite"
+            android:screenOrientation="portrait"/>
         <activity android:name=".PurchaseActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".RegisterActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".ResultActivity" />
         <activity android:name=".QuizActivity" />
-        <activity
-            android:name=".SpinWheelResultActivity"
-            android:theme="@style/AppNoTheme" />
         <activity android:name=".ScratchAndEarnActivity" />
         <activity
             android:name=".SpinAndEarnActivity"
